# dreamscope

./: .gitignore  Makefile  README.md
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: dependencies.py
backend/app/api/: auth.py  dreams.py  schema.py  search.py  serializers.py  tags.py
backend/app/core/: jwt.py  llm.py
backend/app/db/: base.py  models.py  repository.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CrystalBall.tsx  DreamCard.tsx  InterpretationView.tsx  Navbar.tsx  SearchBar.tsx
frontend/src/pages/: AuthCompletePage.tsx  DreamDetailPage.tsx  DreamPage.tsx  FeedPage.tsx  LoginPage.tsx
frontend/src/utils/: interpretation.ts
